--- a/another.js/index.html
+++ b/another.js/index.html
@@ -51,7 +51,7 @@
 </section>
 </main>
 <script src='utilities.js'></script>
-<script src='depositma.js'></script>
+<script src='deposit.js'></script>
 <script src='withdraw.js'></script>
 
 </body>
